# NerVE

./: .gitignore  CITATION.cff  LICENSE  README.md  SETUP_GUIDE.md  demo_pretrained.ipynb  pyproject.toml  requirements.txt  setup.py
configs/: README.md  config.yaml
configs/model/: default.yaml
configs/train/: train.yaml
nerve/: __init__.py  analyzer.py  callback.py  metrics.py  trainer.py
nerve/models/: __init__.py  gpt2.py
notebooks/: README.md  demo_pretrained.ipynb
scripts/: run_clm.py
